--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
     href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap">
    <link rel="stylesheet" href="style.css">
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
+
 
 
 </head>
